Plugin: Hibernate almost works (debugging)